<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical"
        android:weightSum="1">

        <RelativeLayout
            android:id="@+id/tv_login_Layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:gravity="top"
            android:orientation="vertical"
            android:visibility="invisible">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="15dp"
                android:drawablePadding="10dp"
                android:gravity="center"
                android:src="@drawable/logo_login"/>

            <TextView
                android:id="@+id/message_bar_login"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/login_btn_bg"
                android:gravity="center"
                android:text="@string/connection_msg"
                android:visibility="invisible"/>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/progress_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:visibility="gone">

            <!--<com.vb.torahmate.widget.GifMovieView-->
                <!--android:id="@+id/pbar_gif_img"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="100dp"-->
                <!--android:layout_gravity="center"-->
                <!--custom:gif="@drawable/progress_bar_image"/>-->

            <ProgressBar
                android:id="@+id/pbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:layout_gravity="center_horizontal"
                android:progressDrawable="@drawable/progress_bar"/>

            <com.pixplicity.fontview.FontTextView
                android:id="@+id/tv_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center|center_vertical"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:gravity="center|center_vertical"
                android:text="@string/log_in_text"
                android:textSize="16sp"
                app:pix_font="fonts/OpenSans-Regular.ttf"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_tv_welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:visibility="invisible">

                <com.pixplicity.fontview.FontTextView
                    android:id="@+id/tv_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="5dp"
                    android:drawablePadding="10dp"
                    android:gravity="center"
                    android:minHeight="21dp"
                    android:text="@string/tv_welcome_txt"
                    android:textSize="30sp"
                    app:pix_font="fonts/OpenSans-Regular.ttf"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/email_Layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical"
                android:paddingBottom="7dp"
                android:visibility="invisible">

                <com.pixplicity.fontview.FontEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="5dp"
                    android:clickable="true"
                    android:cursorVisible="true"
                    android:focusable="true"
                    android:hint="@string/user_name_txt"
                    android:inputType="textEmailAddress"
                    android:paddingBottom="15dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="10dp"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    app:pix_font="fonts/OpenSans-Regular.ttf"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/password_Layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"
                android:orientation="vertical"
                android:visibility="invisible">

                <com.pixplicity.fontview.FontEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="5dp"
                    android:clickable="true"
                    android:cursorVisible="true"
                    android:focusable="true"
                    android:hint="@string/password_txt"
                    android:inputType="textPassword"
                    android:paddingBottom="15dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="10dp"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    app:pix_font="fonts/OpenSans-Regular.ttf"
                    />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/checkbox_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical"
                android:minHeight="25dp"
                android:visibility="invisible"
                >

                <com.pixplicity.fontview.FontAppCompatCheckbox
                    android:id="@+id/check_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="50dp"
                    android:background="@null"
                    android:button="@null"
                    android:checked="false"
                    android:drawableLeft="@drawable/cb_selector"
                    android:drawablePadding="10dp"
                    android:minHeight="25dp"
                    android:text="@string/remember_password_txt"
                    app:pix_font="fonts/OpenSans-Regular.ttf"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/go_btn_layout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp">

                <!--android:background="@drawable/login_btn_bg"-->
                <com.pixplicity.fontview.FontAppCompatButton
                    android:id="@+id/btn_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="1dp"
                    android:background="@drawable/login_bg_selector"
                    android:text="@string/btn_sign_in_txt"
                    android:visibility="invisible"
                    android:textColor="@color/white"
                    app:pix_font="fonts/OpenSans-Regular.ttf"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>