<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorPrimaryDark"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.pixplicity.fontview.FontTextView
                android:id="@+id/tv_call_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp"
                android:layout_weight=".3"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/call_to"
                android:textColor="@color/colorListText"
                android:textSize="12sp"
                app:pix_font="fonts/OpenSans-Regular.ttf"/>

            <com.pixplicity.fontview.FontTextView
                android:id="@+id/tv_call_to_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp"
                android:layout_weight="0.95"
                android:ellipsize="end"
                android:text="123456789"
                android:textColor="@color/colorListText"
                android:textSize="12sp"
                app:pix_font="fonts/OpenSans-Regular.ttf"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.pixplicity.fontview.FontTextView
                android:id="@+id/tv_minutes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp"
                android:layout_weight=".4"
                android:ellipsize="end"
                android:text="@string/minutes"
                android:textColor="@color/colorListText"
                android:textSize="12sp"
                app:pix_font="fonts/OpenSans-Regular.ttf"/>

            <com.pixplicity.fontview.FontTextView
                android:id="@+id/tv_minutes_val"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp"
                android:layout_weight="0.81"
                android:ellipsize="end"
                android:text="5.00"
                android:textColor="@color/colorListText"
                android:textSize="12sp"
                app:pix_font="fonts/OpenSans-Regular.ttf"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="1">

            <com.pixplicity.fontview.FontTextView
                android:id="@+id/tv_time_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp"
                android:layout_weight=".15"
                android:text="@string/time_place"
                android:textColor="@color/colorListText"
                android:textSize="12sp"
                app:pix_font="fonts/OpenSans-Regular.ttf"/>

            <com.pixplicity.fontview.FontTextView
                android:id="@+id/tv_time_place_val"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp"
                android:layout_weight="0.81"
                android:text="2015-01-26 10:15:35.000"
                android:textColor="@color/colorListText"
                android:textSize="12sp"
                app:pix_font="fonts/OpenSans-Regular.ttf"/>
        </LinearLayout>

        <View
            android:id="@+id/view_liner"
            android:layout_width="fill_parent"
            android:layout_height="0.9dp"
            android:layout_alignBottom="@+id/title"
            android:layout_alignParentStart="true"
            android:background="@color/colorListDivider"
            />
    </LinearLayout>
</LinearLayout>